# cuvis-ai

./: .clinerules  .dockerignore  .env.example  .gitignore  .secrets.baseline  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  README.md  baseline_coverage.txt  build_docs.sh  changelog.md  codecov.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml  pytest.ini  restore_pipeline.md  test_rx_normalization.py  wrap_test.py  wrap_test_torch.py
.githooks/: pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  plugin-runtime-smoke.yml  pypi-release.yml  run_tests.yml
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/api/: index.html
0.3.0/config/: index.html
0.3.0/deployment/: index.html
0.3.0/development/: index.html
0.3.0/grpc/: index.html
0.3.0/how-to/: index.html
0.3.0/node-catalog/: index.html
0.3.0/plugin-system/: index.html
0.3.0/search/: search_index.json
0.3.0/tutorials/: index.html
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/api/: index.html
0.4.0/config/: index.html
0.4.0/deployment/: index.html
0.4.0/development/: index.html
0.4.0/grpc/: index.html
0.4.0/how-to/: index.html
0.4.0/node-catalog/: index.html
0.4.0/plugin-system/: index.html
0.4.0/reports/: docstring_coverage_detailed.txt
0.4.0/search/: search_index.json
0.4.0/stylesheets/: extra.css
0.4.0/tutorials/: index.html
0.5.0/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
0.5.0/api/: index.html
0.5.0/config/: index.html
0.5.0/deployment/: index.html
0.5.0/development/: index.html
0.5.0/grpc/: index.html
0.5.0/how-to/: index.html
0.5.0/javascripts/: mathjax.js  mermaid-theme.js
0.5.0/node-catalog/: index.html
0.5.0/plugin-system/: index.html
0.5.0/search/: search_index.json
0.5.0/tutorials/: index.html
configs/data/: lentils.yaml  tracking_cap_and_car.yaml
configs/experiment/: channel_selector.yaml  deep_svdd.yaml  default.yaml  rx_statistical.yaml
configs/pipeline/: Concrete_AdaClip_Gradient_two_stage.yaml  DRCNN_AdaClip_Gradient.yaml  adaclip_baseline.yaml  adaclip_cir_false_color.yaml  adaclip_cir_false_color_optimal_threshold.yaml  adaclip_cir_false_rg_color.yaml  adaclip_high_contrast.yaml  adaclip_supervised_cir.yaml  adaclip_supervised_full_spectrum.yaml  adaclip_supervised_windowed_false_rgb.yaml  channel_selector.pt  channel_selector.yaml  deep_svdd.pt  deep_svdd.yaml  model.pt  model.yaml  rx_statistical.pt  rx_statistical.yaml
configs/plugins/: adaclip.yaml  bytetrack.yaml  cuvis_ai_builtin.yaml  deepeiou.yaml  detr.yaml  dinomaly.yaml  registry.yaml  sam3.yaml  trackeval.yaml  ultralytics.yaml
configs/training/: default.yaml
configs/trainrun/: adaclip_baseline.yaml  adaclip_cir_false_color.yaml  adaclip_cir_false_color_optimal_threshold.yaml  adaclip_cir_false_rg_color.yaml  adaclip_high_contrast.yaml  adaclip_supervised_cir.yaml  adaclip_supervised_full_spectrum.yaml  adaclip_supervised_windowed_false_rgb.yaml  channel_selector.yaml  channel_selector_false_rgb.yaml  deep_svdd.yaml  deep_svdd__.yaml  default.yaml  default_gradient.yaml  default_statistical.yaml  drcnn_adaclip_trainrun.yaml  rx_statistical.yaml
cuvis_ai/: __init__.py  _version.py
cuvis_ai/anomaly/: AbstractDetector.py  RXDetector.py  __init__.py  abstract_detector.py  deep_svdd.py  lad_detector.py  rx_detector.py  rx_logit_head.py
cuvis_ai/anomoly/: __init__.py  rx_detector.py  rx_v2.py
cuvis_ai/conf/: anomoly_rx.yaml  general.yaml  wandb.yaml
cuvis_ai/data/: CocoLabels.py  CuvisDataSet.py  NumpyDataSet.py  PublicDataSets.py  __init__.py  base_dataset.py  coco_labels.py  cuvis_dataset.py  datasets.py  lentils_anomaly.py  lentils_anomoly.py  lentils_splits.py  live_cuvis_data_loader.py  metadata.py  multi_file_dataset.py  numpy_dataset.py  output_format.py  public_datasets.py  utils_dataloader.py  video.py
cuvis_ai/deciders/: __init__.py  base_decider.py  binary_decider.py  cascaded_decider.py  combining_decider.py  multiclass_decider.py  two_stage_decider.py
cuvis_ai/distance/: __init__.py  distance.py
cuvis_ai/exports/: wandb.py
cuvis_ai/grpc/: __init__.py  callbacks.py  canvas_builder.py  config_service.py  discovery_service.py  health.py  helpers.py  inference_service.py  introspection_service.py  pipeline_service.py  production_server.py  service.py  session_manager.py  training_service.py  trainrun_service.py
cuvis_ai/metrics/: __init__.py  streaming.py
cuvis_ai/node/: __init__.py  adaclip.py  adaclip_node.py  anomaly_visualization.py  band_selection.py  base.py  channel_mixer.py  channel_selector.py  colormap.py  concrete_selector.py  conversion.py  data.py  dimensionality_reduction.py  drcnn_tensorboard_viz.py  huggingface.py  json_file.py  json_reader.py  json_writer.py  labels.py  losses.py  metrics.py  monitor.py  node.py  normalization.py  numpy_reader.py  numpy_writer.py  occlusion.py  pca.py  pipeline_visualization.py  preprocessors.py  prompts.py  selector.py  sklearn.py  skorch.py  spectral_angle_mapper.py  spectral_extractor.py  static_node.py  torchvision.py  video.py  visualizations.py  (+1 more)
cuvis_ai/normalization/: normalization.py
docs/: assets  conf.py  gen_ref_pages.py  index.md
example_torch/: 02_rx_anomoly_detection.py  params.py
examples/: channel_selector.py  deep_svdd_gradient_training.py  gradient_training.py  huggingface_api_demo.py  lad_statistical_training_with_preprocessing.py  rx_statistical.py  statistical_training.py
examples_torch/: 02_rx_anomoly_detection.py  channel_selector.py  gradient_training.py  params.py  phase1_statistical_training.py  phase2_visualization_training.py  phase3_gradient_training.py  phase4_soft_channel_selector.py  statistical_training.py
scripts/: __init__.py  download_data.py
tests/: README.md  conftest.py  test_imports.py  test_node_autocomplete.py  test_node_hparams.py  test_numpy_utils.py  test_preprocessor_structural.py  test_serialization.py  test_unsupervised_structural.py
tools/: __init__.py  generate_node_port_stubs.py  validate_trainrun_configs.py  xml_to_npy.py
(+673 files in other folders)
