[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvis-ai"
dynamic = ["version"]
description = "Collaborative Framework for Hyperspectral Intelligence"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cubert GmbH, Ulm, Germany", email = "cuvis.ai@cubert-gmbh.com" },
]
dependencies = [
    "cuvis==3.5.0",
    "cuvis-ai-core>=0.1.2",  # Resolved from PyPI when available, or local path via [tool.uv.sources]
    "cuvis-ai-schemas[full]>=0.1.0",
    "pydantic>=2.0.0,<3.0.0",
    "imantics",
    "ftfy>=6.1.1",
    "markupsafe!=3.0.2",
    "matplotlib",
    "opencv-python",
    "gitpython>=3.1.40",
    "pyyaml",
    "scikit-image",
    "scikit-learn",
    "tensorboard",
    # Core framework dependencies
    "torch>=2.9.1",
    "torchvision",
    "torchmetrics",
    "pytorch-lightning",
    "tzdata; sys_platform == 'win32'",
    "loguru>=0.7.3",
    "packaging>=23.0",
    "omegaconf>=2.3.0",
    "hydra-core",
    "dotenv>=0.9.9",
    "regex>=2023.12.25",
    "huggingface-hub>=0.20.0",
    "transformers>=4.36.0",
    "hf-xet>=1.2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

[project.scripts]
create-stubs = "tools.generate_node_port_stubs:main"
download-data = "scripts.download_data:main"
restore-pipeline = "cuvis_ai_core.utils.restore:restore_pipeline_cli"
restore-trainrun = "cuvis_ai_core.utils.restore:restore_trainrun_cli"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "opencv-python-headless",
    "pytest-check-links>=0.9.0",
    "pytest-md-report>=0.3.0",
    # --- Documentation versioning ---
    "mike>=1.1.0",
]

dev = [
    "ipykernel",
    "jupyterlab",
    "ruff",
    "pytest",
    "pytest-cov",
    "ipympl>=0.9.8",
    "ipdb>=0.13.13",
    "psutil",
    "interrogate>=1.5.0",
    # --- Release automation dependencies ---
    "twine>=6.2.0",
    "pip-audit>=2.7.0",
    "bandit[toml]>=1.7.0",
    "detect-secrets>=1.4.0",
    "pip-licenses>=4.0.0",
    "cyclonedx-bom>=4.0.0",
]


[project.urls]
Homepage = "https://www.cubert-hyperspectral.com/"
Repository = "https://github.com/cubert-hyperspectral/cuvis-ai"
Documentation = "https://cubert-hyperspectral.github.io/cuvis.ai/"
Changelog = "https://github.com/cubert-hyperspectral/cuvis-ai/releases"
Issues = "https://github.com/cubert-hyperspectral/cuvis-ai/issues"

[tool.setuptools.packages.find]
include = ["cuvis_ai*", "tools*", "scripts*"]


[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
# cuvis-ai-core = { path = "../cuvis-ai-core", editable = true }
# DEVELOPMENT: Keep uncommented for local development
# cuvis-ai-core = { path = "../../cuvis-ai-core/cuvis-ai-core", editable = true }
# RELEASE: Uncomment above line for local development - resolves from PyPI for release
# cuvis-ai-schemas = { path = "../../cuvis-ai-schemas", editable = true }
# cuvis-ai-core = { git = "https://github.com/cubert-hyperspectral/cuvis-ai-core.git", tag = "v0.1.1" }

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
addopts = "-ra --showlocals"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning: pkg_resources is deprecated as an API.*",
    "ignore:Module already imported so cannot be rewritten",
]
markers = [
    "stress: marks tests as stress tests (deselect with '-m \"not stress\"')",
    "gpu: marks tests as GPU tests (deselect with '-m \"not gpu\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "C4",
]
extend-select = [
    "ANN201",
    "ANN202",
    "ANN204",
]
ignore = [
    "ANN401",
    "E501"
]

[tool.ruff.lint.per-file-ignores]
"docs/**" = [
    "ANN201",
    "ANN202",
    "ANN204",
]
"tests/**" = [
    "ANN201",
    "ANN202",
    "ANN204",
]
"cuvis_ai/grpc/v1/*.py" = [
    "ANN201",
    "ANN204",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-private = false
ignore-property-decorators = false
ignore-semiprivate = false
ignore-setters = false
fail-under = 95.0
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^get$", "^set$", "^main$"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "docs/assets/"
badge-format = "svg"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests", "build", "dist"]

[tool.bandit]
exclude_dirs = ["tests", "cuvis_ai/grpc"]
skips = ["B101"]  # Skip assert_used check

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
